smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/map-unclosed-parameters3.smithy
// Parse error at line 3, column 48 near `AnotherShape`: Unexpected EOF
namespace com.foo
map MyMap { key: SomeShape, value: AnotherShape
